css/index.css
body {
	background: #ddd;
	color: #fff;
	font-family:'Helvetica Neue',Helvetica,Arial,Verdana,sans-serif;
	font-size: 50px;
}

a:link, a:visited {
	color: #fff;
	text-decoration:none;
}
a:hover {
	color: #fff;
}
a:active {
	color: #e5e5e5;
}

span.th {
	font-size: .75em;
	vertical-align: top;
}

#wrapper {
	position: absolute;
	left: 50%;
	margin-left: -728px;
	top: 50%;
	margin-top: -450px;
	width: 1440px;
	height: 900px;
	background: #000;
}

#wrapper ul#panelwrapper {
	width: 1440px;
	height: 900px;
	position: relative;
}

#wrapper ul#panelwrapper li.panel {
	display: block;
	position: absolute;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	-o-box-sizing: border-box;
	box-sizing: border-box;
}

#wrapper ul#panelwrapper li.panel#time {
	width: 100%;
	height: 1.1em;
	top: 0;
	left: 0;
	text-align: center;
}

#wrapper ul#panelwrapper li.panel#note {
	left: calc(720px - 3em);
	top: 1.1em;
	width: 6em;
	height: 6em;
	overflow: hidden;
	background-color: #dcc11e;
	border-radius: .5em;
	color: #111;
	padding: .2em;
}

#wrapper ul#panelwrapper li.panel#note p#noteText {
	text-overflow: ellipsis;
}

#wrapper ul#panelwrapper li.panel#weather {
	top: 1.1em;
	right: .5em;
}
#wrapper ul#panelwrapper li.panel#weather #skycon {
	margin-left: calc(50% - 64px);
	width: 128px;
	height: 128px;
}
 #wrapper ul#panelwrapper li.panel#weather div#data {
	 vertical-align: top;
 }
 #wrapper ul#panelwrapper li.panel#weather div#data div.wdata {
 	display: block;
	float: left;
 }
#wrapper ul#panelwrapper li.panel#weather div#data #temp {
	font-size: 2.5em;
	font-weight: 200;
	vertical-align: top;
	margin-right: .15em;
}
#wrapper ul#panelwrapper li.panel#weather div#data div#highLow {
	font-size: .75em;
	margin-top: .45em;
}
#wrapper ul#panelwrapper li.panel#weather div#data div#highLow ul li {
	text-align: center;
}

#wrapper ul#panelwrapper li.panel#weather div#data div#highLow ul li#highItem {
	margin-bottom: .25em;
	padding-bottom: .25em;
	border-bottom: .05em #ffffff solid;
}

#wrapper ul#panelwrapper li.panel#weather div#data div#highLow ul li#highItem {
	color: #feccba;
}

#wrapper ul#panelwrapper li.panel#weather div#data div#highLow ul li#lowItem {
	color: #c6efff;
}

#wrapper ul#panelwrapper li.panel#bus {
	bottom: .5em;
	right: .5em;
}
#wrapper ul#panelwrapper li#bus ul#busList {
	max-height: 7.35em;
}
#wrapper ul#panelwrapper li#bus ul#busList li {
	background-color: #444;
	border-bottom: .05em solid #111;
	padding: .4em;
	width: 12em;
}
#wrapper ul#panelwrapper li#bus ul#busList li:last-of-type {
	border-bottom: none;
}
#wrapper ul#panelwrapper li#bus ul#busList li span.route {
	width: 1.75em;
	display: inline-block;
	text-align: right;
}
#wrapper ul#panelwrapper li#bus ul#busList li span.dest {
	margin-left: .5em;
	font-size: .8em;
	vertical-align: bottom;
	margin-bottom: .1em;
	display: inline-block;
}
#wrapper ul#panelwrapper li.panel.train h3, #wrapper ul#panelwrapper li.panel#bus h3 {
	margin-bottom: .2em;
}
#wrapper ul#panelwrapper li.panel.train ul, #wrapper ul#panelwrapper li.panel#bus ul#busList {
	border-radius: .5em;
	overflow: hidden;
}
#wrapper ul#panelwrapper li.panel#trainNorth {
	top: 1.1em;
	left: .5em;
}

#wrapper ul#panelwrapper li.panel#trainSouth {
	bottom: .5em;
	left: .5em;
}
#wrapper ul#panelwrapper li.panel.train ul li {
	padding: .4em;
	width: 9.5em;
}
#wrapper ul#panelwrapper li.panel.train ul li {
	color: #ffffff;
	border-bottom: .05em solid #111;
}
#wrapper ul#panelwrapper li.panel.train ul li:last-of-type {
	border-bottom: none;
}
#wrapper ul#panelwrapper li.panel.train ul li.wht {
	background-color: #f8f8f8;
	color: #48aa47;
}
#wrapper ul#panelwrapper li.panel.train ul li.gre {
	background-color: #219a11;
}
#wrapper ul#panelwrapper li.panel.train ul li.red {
	background-color: #b11b27;
}
#wrapper ul#panelwrapper li.panel.train ul li.org {
	background-color: #d57636;
}
span.min {
	padding-left: 20px;
	float: right;
}

